# crab_description

./: CMakeLists.txt
launch/: .display.launch.swp  display.launch  display.launch~  display.launch~.orig  display_evolve.launch  empty_world.launch  empty_world2.launch
models/: crab.gv  crab_leg.xacro  crab_model.urdf  crab_model.xacro  crab_model.xacro.orig
params/: ctrl_params.yaml
src/: Evol.cpp  Evol_2leg_dyncollision.cpp  Evol_4leg.cpp  Evol_paral.cpp  Evol_paral.cpp.orig  Evol_single.cpp  state_publisher.cpp
src/Algorithm_lib/: NEAT.cpp  NEAT.h
world/: empty.world
